@@ -1,5 +1,9 @@
 2008-08-25  Sven Neumann  <sven@gimp.org>
 
+	* app/paint-funcs/scale-region.c: reverted last change; it was bogus.
+
+2008-08-25  Sven Neumann  <sven@gimp.org>
+
 	* app/paint-funcs/scale-region.c: don't scale in several steps if
 	interpolation is GIMP_INTERPOLATION_NONE.
 
